Add usage of wavelet transform

--- a/notebooks/sounds.ipynb
+++ b/notebooks/sounds.ipynb
@@ -31,6 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dataclasses import dataclass\n",
     "from time import sleep\n",
     "import datetime as dt\n",
     "import numpy as np\n",
@@ -42,6 +43,8 @@
     "from hapiclient import hapi, hapitime2datetime\n",
     "import resampy\n",
     "import pyrubberband as pyrb\n",
+    "\n",
+    "from swarmx.toolboxes.tfa import tfalib\n",
     "\n",
     "import panel as pn\n",
     "\n",
@@ -72,44 +75,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "767a4c19-9b22-4823-afb4-12a0ca86855e",
+   "id": "c87789a3-a1ca-4aa3-899b-204606b558b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def fetch_data(t0, t1) -> pd.DataFrame:\n",
     "    \"\"\"Fetch data from VirES HAPI\n",
-    "    \n",
-    "    This needs to be done in chunks due to the limit, x_maxTimeSelection\n",
     "    \"\"\"\n",
-    "    # Generate time chunks\n",
-    "    times = pd.date_range(start=t0, end=t1, freq=\"D\").to_pydatetime()\n",
-    "    start_times = times[:-1]\n",
-    "    end_times = times[1:]\n",
-    "    # Build dataframe in chunks of _df\n",
-    "    df = pd.DataFrame()\n",
-    "    for start_time, end_time in zip(start_times, end_times):\n",
-    "        # Fetch data\n",
-    "        data, meta = hapi(\n",
-    "            \"https://vires.services/hapi/\",\n",
-    "            \"SW_OPER_MAGA_LR_1B\",\n",
-    "            \"Latitude,Longitude,Radius,F\",  # ,B_NEC\",\n",
-    "            start_time.isoformat(),\n",
-    "            end_time.isoformat(),\n",
-    "        )\n",
-    "        # Convert to dataframe\n",
-    "        #  To fix: this will not work with vector, e.g. B_NEC\n",
-    "        _df = pd.DataFrame(columns=data.dtype.names, data=data)\n",
-    "        _df = _df.set_index(\"Timestamp\")\n",
-    "        _df.index = hapitime2datetime(_df.index.values.astype(str))\n",
-    "        _df.index = _df.index.tz_convert(\"UTC\").tz_convert(None)\n",
-    "        df = pd.concat([df, _df])\n",
+    "    if isinstance(t0, dt.datetime):\n",
+    "        t0 = t0.isoformat()\n",
+    "        t1 = t1.isoformat()\n",
+    "    data, meta = hapi(\n",
+    "        \"https://vires.services/hapi/\",\n",
+    "        \"SW_OPER_MAGA_LR_1B\",\n",
+    "        \"Latitude,Longitude,Radius,F\",  # ,B_NEC\",\n",
+    "        t0,\n",
+    "        t1,\n",
+    "    )\n",
+    "    # Convert to dataframe\n",
+    "    #  To fix: this will not work with vector, e.g. B_NEC\n",
+    "    df = pd.DataFrame(columns=data.dtype.names, data=data)\n",
+    "    df = df.set_index(\"Timestamp\")\n",
+    "    df.index = hapitime2datetime(df.index.values.astype(str))\n",
+    "    df.index = df.index.tz_convert(\"UTC\").tz_convert(None)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba594081-fce6-404e-8c00-4c790c938b49",
+   "id": "f47dcb05-e471-4a89-9e0e-3a853247d201",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +198,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d52bae5-37e1-42c1-bb5a-aab2951951e9",
+   "metadata": {},
+   "source": [
+    "### Wavelet analysis from SwarmX:TFA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "259cad14-cabf-4885-b042-0f498cde8b93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WaveletAnalysis:\n",
+    "\n",
+    "    def __init__(self, x, sampling_rate=1, cutoff=3/1000, minScale=2, maxScale=1000, dx_wave=1, dj=0.1):\n",
+    "        self.x = x\n",
+    "        self.sampling_rate = sampling_rate\n",
+    "        self.cutoff = cutoff\n",
+    "        self.minScale = minScale\n",
+    "        self.maxScale = maxScale\n",
+    "        self.dx_wave = dx_wave\n",
+    "        self.dj = dj\n",
+    "        self.highpass_filter_chebysev()\n",
+    "        self.wavelet_transform()\n",
+    "\n",
+    "    def highpass_filter_chebysev(self):\n",
+    "        self.x2 = tfalib.filter(self.x, self.sampling_rate, self.cutoff)\n",
+    "\n",
+    "    def wavelet_transform(self):\n",
+    "        W, scales = tfalib.wavelet_transform(self.x2, self.dx_wave, tfalib.morlet_wave, self.minScale, self.maxScale, dj=self.dj)\n",
+    "        self.W = W\n",
+    "        self.scales = scales\n",
+    "\n",
+    "    def plot_spectrogram_of_wavelet_transform(self):\n",
+    "        x2 = self.x2\n",
+    "        W = self.W\n",
+    "        scales = self.scales\n",
+    "        dj = self.dj\n",
+    "        log2scales = np.log2(scales)\n",
+    "        W2 = np.abs(W)**2\n",
+    "        vmin = np.percentile(W2.flatten(), 2)\n",
+    "        vmax = np.percentile(W2.flatten(), 98)\n",
+    "        plt.imshow(W2[::-1, :], aspect=\"auto\", extent=(x2[0], x2[-1], log2scales[0], log2scales[-1]), vmin=vmin, vmax=vmax)\n",
+    "        plt.yticks(\n",
+    "            np.arange(log2scales[0], log2scales[-1] + dj),\n",
+    "            labels=2**np.arange(log2scales[0], log2scales[-1] + dj)\n",
+    "        )\n",
+    "\n",
+    "    def flatten_wavelet_transform(self):\n",
+    "        return np.sum(np.abs(self.W), axis=0)\n",
+    "\n",
+    "\n",
+    "def transform_using_wavelets(x, sampling_rate=1, cutoff=3/1000, minScale=2, maxScale=1000, dx_wave=1, dj=0.1):\n",
+    "    wavelets_out = WaveletAnalysis(x, sampling_rate=sampling_rate, cutoff=cutoff, minScale=minScale, maxScale=maxScale, dx_wave=dx_wave, dj=dj)\n",
+    "    return wavelets_out.flatten_wavelet_transform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee86e149-130c-47c8-bfd3-12591868367a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wavelets_out = WaveletAnalysis(df[\"F\"].values)\n",
+    "# wavelets_out.plot_spectrogram_of_wavelet_transform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e0ef90c-0477-47fb-9e87-5fed6f09668a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.plot(wavelets_out.flatten_wavelet_transform())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b579e435-18b9-40d5-9875-4414ef7ef102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# audio_data = apply_audio_pipeline(wavelets_out.flatten_wavelet_transform())\n",
+    "# plot_spectrogram(audio_data, fs=44100, resampling_factor=7, ymax=800)\n",
+    "# get_sound_pane(\n",
+    "#     sound_format(audio_data),\n",
+    "#     fs=44100\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "333896bb-d97b-4341-afb5-05fe1ea8bf35",
    "metadata": {},
    "source": [
@@ -242,11 +333,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f29440b6-7373-44c8-9a8e-4d56a715b70c",
+   "id": "90b86207-b245-404f-b421-ed49155bbeae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_audio_pipeline(x, target_length=10, shift_octaves=1):\n",
+    "def apply_audio_pipeline(x, target_length=10, shift_octaves=1, transform=False, transform_kwargs=dict()):\n",
+    "    if transform:\n",
+    "        x = transform_using_wavelets(x, **transform_kwargs)\n",
     "    x = normalise(x)\n",
     "    x = highpass_filter(x, filter_order=8, cutoff_freq=0.0001, fs=1)\n",
     "    x = resample(x, fs=44100, resampling_factor=7)\n",
@@ -254,19 +347,18 @@
     "    x = time_stretch(x, fs=44100, target_length=target_length)\n",
     "    x = pitch_shift(x, fs=44100, octaves=shift_octaves)\n",
     "    # plot_spectrogram(x, fs=44100, resampling_factor=7, ymax=800)\n",
-    "    return x\n",
-    "\n",
-    "premade_audio_data = apply_audio_pipeline(df[\"F\"].values, target_length=10, shift_octaves=1)"
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd8e7c9-896a-48eb-82f4-a7ec1ff6ee2d",
+   "id": "40b369e1-8936-4b06-8296-29991d612121",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_spectrogram(premade_audio_data, fs=44100, resampling_factor=7, ymax=800)"
+    "premade_audio_data = apply_audio_pipeline(df[\"F\"].values, target_length=10, shift_octaves=1)\n",
+    "# plot_spectrogram(premade_audio_data, fs=44100, resampling_factor=7, ymax=800)"
    ]
   },
   {
@@ -276,10 +368,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_sound_pane(\n",
-    "    sound_format(premade_audio_data),\n",
-    "    fs=44100\n",
-    ")"
+    "# get_sound_pane(\n",
+    "#     sound_format(premade_audio_data),\n",
+    "#     fs=44100\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2734ebe-35fe-4760-97ef-8af76f35fe89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# premade_audio_data_transformed = apply_audio_pipeline(df[\"F\"].values, target_length=10, shift_octaves=1, transform=True)\n",
+    "# plot_spectrogram(premade_audio_data_transformed, fs=44100, resampling_factor=7, ymax=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2faf6f55-3f01-45db-8607-27bab5aa09d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get_sound_pane(\n",
+    "#     sound_format(premade_audio_data_transformed),\n",
+    "#     fs=44100\n",
+    "# )"
    ]
   },
   {
@@ -317,6 +433,7 @@
     "                name=\"Fetch data\", button_type=\"primary\"\n",
     "            ),\n",
     "            \"loading1\": pn.indicators.Progress(active=False, sizing_mode=\"stretch_width\"),\n",
+    "            \"wavelet_transform_checkbox\": pn.widgets.Checkbox(name=\"Apply wavelet transform:\"),\n",
     "            \"target_length\": pn.widgets.IntSlider(\n",
     "                name=\"Output length (seconds)\",\n",
     "                start=1, end=60, step=1, value=10\n",
@@ -331,6 +448,14 @@
     "            \"loading2\": pn.indicators.Progress(active=False, sizing_mode=\"stretch_width\"),\n",
     "            \"file_download\": pn.widgets.FileDownload(file=wavfilename)\n",
     "        }\n",
+    "        self.widgets_wavelet_transform = {\n",
+    "            \"sampling_rate\": pn.widgets.EditableFloatSlider(name=\"Sampling rate\", start=0.1, end=10, value=1, step=0.01),\n",
+    "            \"cutoff\": pn.widgets.EditableFloatSlider(name=\"Cutoff frequency\", start=0.001, end=0.01, value=0.003, step=0.0001),\n",
+    "            \"minScale\": pn.widgets.EditableFloatSlider(name=\"Wavelet smallest scale\", start=1, end=100, value=2, step=1),\n",
+    "            \"maxScale\": pn.widgets.EditableFloatSlider(name=\"Wavelet largest scale\", start=200, end=2000, value=1000, step=1),\n",
+    "            \"dx_wave\": pn.widgets.EditableFloatSlider(name=\"Data time step\", start=0.1, end=10, value=1, step=0.1),\n",
+    "            \"dj\": pn.widgets.EditableFloatSlider(name=\"Step size for scales for wavelet transform\", start=0.05, end=0.15, value=0.1, step=0.01),\n",
+    "        }\n",
     "        self.panes = {\n",
     "            \"audio\": get_sound_pane(sound_format(self.audio_data)),\n",
     "            \"spectrogram_in\": pn.pane.Matplotlib(spectrogram_in),\n",
@@ -338,7 +463,7 @@
     "        }\n",
     "        self.widgets[\"button1\"].on_click(self.update_data)\n",
     "        self.widgets[\"button2\"].on_click(self.update_audio)\n",
-    "        \n",
+    "\n",
     "    def update_data(self, event):\n",
     "        \"\"\"Fetch the data from VirES and reset the dashboard\"\"\"\n",
     "        t0, t1 = self.widgets[\"time_range\"].value\n",
@@ -351,22 +476,42 @@
     "        self.widgets[\"button1\"].name = \"Busy...\"\n",
     "        self.widgets[\"loading1\"].active = True\n",
     "        self.df = fetch_data(t0, t1)\n",
-    "        spectrogram_in = plot_spectrogram(self.df[\"F\"].values)\n",
+    "        try:\n",
+    "            spectrogram_in = plot_spectrogram(self.df[\"F\"].values)\n",
+    "        except KeyError:\n",
+    "            self.widgets[\"button1\"].name = \"Missing data for this time...\"\n",
+    "            self.widgets[\"time_range\"].value = self.default_t0t1\n",
+    "            sleep(3)\n",
+    "            self.widgets[\"button1\"].name = \"Fetch data\"\n",
+    "            self.widgets[\"loading1\"].active = False\n",
+    "            return None\n",
     "        self.panes[\"spectrogram_in\"].object = spectrogram_in\n",
     "        self.widgets[\"button1\"].name = \"Fetch data\"\n",
     "        self.widgets[\"loading1\"].active = False\n",
     "        self.update_audio(None)\n",
     "\n",
     "    def update_audio(self, event):\n",
+    "        try:\n",
+    "            self._update_audio()\n",
+    "        except Exception:\n",
+    "            self.widgets[\"button2\"].name = \"Oops! Something went wrong\"\n",
+    "            self.widgets[\"loading2\"].active = False\n",
+    "\n",
+    "    def _update_audio(self):\n",
     "        \"\"\"Update the output spectrogram and audio\"\"\"\n",
     "        self.panes[\"audio\"].paused = True\n",
     "        self.widgets[\"button2\"].name = \"Busy...\"\n",
     "        # Change contents of audio and spectrogram\n",
     "        self.widgets[\"loading2\"].active = True\n",
+    "        # Extract kwargs to pass to the wavelet transform\n",
+    "        wavelet_transform_kwargs = {k: v.value for k, v in self.widgets_wavelet_transform.items()}\n",
+    "        # Apply the pipeline\n",
     "        x = apply_audio_pipeline(\n",
     "            self.df[\"F\"].values,\n",
     "            target_length=self.widgets[\"target_length\"].value,\n",
-    "            shift_octaves=self.widgets[\"shift_octaves\"].value\n",
+    "            shift_octaves=self.widgets[\"shift_octaves\"].value,\n",
+    "            transform=self.widgets[\"wavelet_transform_checkbox\"].value,\n",
+    "            transform_kwargs=wavelet_transform_kwargs\n",
     "        )\n",
     "        self.audio_data = x\n",
     "        self.panes[\"audio\"].object = sound_format(x)\n",
@@ -376,7 +521,7 @@
     "        # Reset button & loading widget\n",
     "        self.widgets[\"button2\"].name = \"Regenerate sound ➡️\"\n",
     "        self.widgets[\"loading2\"].active = False\n",
-    "        \n",
+    "\n",
     "    def write_file_for_download(self, filename=\"sonification.wav\"):\n",
     "        wavfile.write(filename, 44100, sound_format(self.audio_data))\n",
     "        return filename\n",
@@ -385,29 +530,44 @@
     "        \"\"\"GridSpec-based layout of all the widgets and panes\"\"\"\n",
     "        gspec = pn.GridSpec(sizing_mode=\"stretch_both\", max_height=800)\n",
     "        gspec[:, 0] = pn.Column(\n",
-    "            pn.pane.Markdown(\"## Input data\"),\n",
+    "            pn.pane.Markdown(\"## 1. Input data\"),\n",
     "            pn.pane.Markdown(\"`SW_OPER_MAGA_LR_1B: F`\"),\n",
     "            self.widgets[\"time_range\"],\n",
     "            self.widgets[\"button1\"],\n",
     "            self.widgets[\"loading1\"],\n",
-    "            pn.pane.Markdown(\"## Input spectrogram\"),\n",
+    "            pn.pane.Markdown(\"### Input spectrogram\"),\n",
     "            self.panes[\"spectrogram_in\"]\n",
     "        )\n",
     "        gspec[:, 1] = pn.Column(\n",
-    "            self.widgets[\"target_length\"],\n",
-    "            self.widgets[\"shift_octaves\"],\n",
-    "            self.widgets[\"button2\"],\n",
-    "            background=\"WhiteSmoke\"\n",
+    "            pn.pane.Markdown(\"## 2. Transformations\"),\n",
+    "            pn.layout.spacer.VSpacer(max_height=10),\n",
+    "            pn.Column(\n",
+    "                self.widgets[\"wavelet_transform_checkbox\"],\n",
+    "                *self.widgets_wavelet_transform.values(),\n",
+    "                pn.pane.Markdown(\"*To apply these, tick the checkbox above*\"),\n",
+    "                background=\"WhiteSmoke\",\n",
+    "                align=\"center\"\n",
+    "            ),\n",
+    "            pn.layout.spacer.VSpacer(max_height=10),\n",
+    "            pn.Column(\n",
+    "                self.widgets[\"target_length\"],\n",
+    "                self.widgets[\"shift_octaves\"],\n",
+    "                self.widgets[\"button2\"],\n",
+    "                background=\"WhiteSmoke\",\n",
+    "                align=\"center\"\n",
+    "            ),\n",
+    "            pn.layout.spacer.VSpacer(max_height=10),\n",
+    "            background=\"Snow\"\n",
     "        )\n",
     "        gspec[:, 2] = pn.Column(\n",
-    "            pn.pane.Markdown(\"## Output spectrogram & audio\"),\n",
+    "            pn.pane.Markdown(\"## 3. Output spectrogram & audio\"),\n",
     "            self.widgets[\"loading2\"],\n",
     "            self.panes[\"spectrogram_out\"],\n",
     "            self.panes[\"audio\"],\n",
     "            self.widgets[\"file_download\"]\n",
     "        )\n",
     "        return gspec\n",
-    "        \n",
+    "\n",
     "\n",
     "SoundDashboard().display().servable(\"Sounds from Swarm\")"
    ]
@@ -415,9 +575,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "",
+   "name": ""
   },
   "language_info": {
    "codemirror_mode": {
@@ -429,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
